--- a/Components/Pages/PHQ2Survey.razor
+++ b/Components/Pages/PHQ2Survey.razor
@@ -2,17 +2,17 @@
 @using BlazorMediLab.Models
 @using Microsoft.AspNetCore.Components
 @using Microsoft.AspNetCore.Components.Forms
-
 @inject BlazorMediLab.Data.SurveyDbContext DbContext
+@rendermode InteractiveServer
 
-<h3>PHQ-2 Survey</h3>
+@* <h3>PHQ-2 Survey</h3>
 
 <EditForm Model="@model" OnValidSubmit="HandleValidSubmit" FormName="PHQ2Form">
     <DataAnnotationsValidator />
     <ValidationSummary />
 
     <p>1. Little interest or pleasure in doing things:</p>
-    <InputRadioGroup @bind-Value="model.Question1">
+    <InputRadioGroup TValue="int" @bind-Value="model.Question1">
         @foreach (var option in options)
         {
             <div>
@@ -22,7 +22,7 @@
     </InputRadioGroup>
 
     <p>2. Feeling down, depressed, or hopeless:</p>
-    <InputRadioGroup @bind-Value="model.Question2">
+    <InputRadioGroup TValue="int" @bind-Value="model.Question2">
         @foreach (var option in options)
         {
             <div>
@@ -43,7 +43,8 @@
 }
 
 @code {
-    private PHQ2Model model = new();
+    [SupplyParameterFromForm]
+    private PHQ2Model model { get; set; } = new();
     private bool submitted = false;
 
     private List<(int Value, string Text)> options = new()
@@ -66,5 +67,87 @@
         DbContext.PHQ2Responses.Add(model);
         await DbContext.SaveChangesAsync();
         submitted = true;
+        model = new PHQ2Model();
+        StateHasChanged();
+    }
+}
+
+
+@page "/Survey"
+@using BlazorMediLab.Models
+@inject BlazorMediLab.Data.SurveyDbContext DbContext *@
+
+<h3>PHQ-2 Survey</h3>
+
+<EditForm Model="@model" OnValidSubmit="HandleValidSubmit">
+    <DataAnnotationsValidator />
+    <ValidationSummary />
+
+    <table class="table table-bordered text-center">
+        <thead>
+            <tr>
+                <th></th>
+                @foreach (var option in options)
+                {
+                    <th>@option.Text</th>
+                }
+            </tr>
+        </thead>
+        <tbody>
+            <tr>
+                <td>1. Little interest or pleasure in doing things</td>
+                @foreach (var option in options)
+                {
+                    <td>
+                        <InputRadioGroup @bind-Value="model.Question1">
+                            <InputRadio Value="@option.Value" />
+                        </InputRadioGroup>
+                    </td>
+                }
+            </tr>
+            <tr>
+                <td>2. Feeling down, depressed, or hopeless</td>
+                @foreach (var option in options)
+                {
+                    <td>
+                        <InputRadioGroup @bind-Value="model.Question2">
+                            <InputRadio Value="@option.Value" />
+                        </InputRadioGroup>
+                    </td>
+                }
+            </tr>
+        </tbody>
+    </table>
+
+    <button class="btn btn-primary mt-3" type="submit">Submit</button>
+</EditForm>
+
+@if (submitted)
+{
+    <p class="mt-3"><strong>Total Score:</strong> @model.TotalScore</p>
+}
+
+@code {
+    private PHQ2Model model = new();
+    private bool submitted = false;
+
+    private List<(int Value, string Text)> options = new()
+{
+(0, "Not at all"),
+(1, "Several days"),
+(2, "More than half the days"),
+(3, "Nearly every day")
+};
+
+    private async Task HandleValidSubmit()
+    {
+        model.TotalScore = model.Question1 + model.Question2;
+        model.SubmittedAt = DateTime.Now;
+
+        DbContext.PHQ2Responses.Add(model);
+        await DbContext.SaveChangesAsync();
+
+        submitted = true;
+        model = new PHQ2Model();
     }
 }
